--- a/dskyweb/mission/styles.css
+++ b/dskyweb/mission/styles.css
@@ -97,3 +97,25 @@ body {
 .hidden {
     display: none;
 }
+
+.video-border {
+    border: 4px solid #8aff80; /* Green border */
+    max-width: 100%;
+    max-height: 100%;
+    display: block; /* removes any gap below the video */
+}
+
+.video-container {
+    width: 80%; /* or any desired size */
+    height: 0; /* this is important to maintain the aspect ratio */
+    padding-bottom: 56.25%; /* aspect ratio for 16:9 videos */
+    position: relative;
+    margin: auto; /* center the video if desired */
+	margin-bottom: 20px;
+}
+
+.video-container video {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
